force-app/main/default/objects/cdcpc__RD_MasterBlaster__c/cdcpc__RD_MasterBlaster__c.object-meta.xml
<CustomObject>
    <label>RD_MasterBlaster</label>
    <nameField>
        <label>RD_MasterBlaster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD_MasterBlaster</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>