force-app/main/default/objects/cdcpc__RD_MasterBlaster__c/fields/cdcpc__CDC_Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__CDC_Ext_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>CDC_Ext_ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>