force-app/main/default/objects/cdcpc__RD_MasterBlaster__c/fields/cdcpc__China_ML_UL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__China_ML_UL__c</fullName>
    <label>China ML UL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>