force-app/main/default/objects/cdcpc__RD_MasterBlaster__c/fields/cdcpc__KOSHA_LL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__KOSHA_LL__c</fullName>
    <label>KOSHA LL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>