force-app/main/default/objects/cdcpc__RD_MasterBlaster__c/fields/cdcpc__MatlCodePos__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MatlCodePos__c</fullName>
    <label>MatlCodePos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>