force-app/main/default/objects/cdcpc__RD_MasterBlaster__c/fields/cdcpc__MNFA__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MNFA__c</fullName>
    <label>MNFA</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>