force-app/main/default/objects/cdcpc__RD_MasterBlaster__c/fields/cdcpc__PosValue__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__PosValue__c</fullName>
    <label>PosValue</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>