force-app/main/default/objects/cdcpc__RD_MasterBlaster__c/fields/cdcpc__PosWithstand_Ind_Value__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__PosWithstand_Ind_Value__c</fullName>
    <label>PosWithstand Ind Value</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>