force-app/main/default/objects/cdcpc__RD_MasterBlaster__c/fields/cdcpc__Quick_Change_Seat__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Quick_Change_Seat__c</fullName>
    <label>Quick Change Seat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>