force-app/main/default/objects/cdcpc__RD_MasterBlaster__c/fields/cdcpc__SZC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__SZC__c</fullName>
    <label>SZC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>