force-app/main/default/objects/cdcpc__RD_MasterBlaster__c/fields/cdcpc__Teflon_Ambient__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Teflon_Ambient__c</fullName>
    <label>Teflon Ambient</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>