force-app/main/default/objects/cdcpc__RD_MasterBlaster__c/fields/cdcpc__VacLL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__VacLL__c</fullName>
    <label>VacLL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>