force-app/main/default/objects/cdcpc__RD_MasterBlaster__c/fields/cdcpc__VacWithstand_Ind__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__VacWithstand_Ind__c</fullName>
    <label>VacWithstand Ind</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Ratio</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>