force-app/main/default/objects/cdcpc__RD_MasterBlaster__c/fields/cdcpc__VacWithstand_Ind_Value__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__VacWithstand_Ind_Value__c</fullName>
    <label>VacWithstand Ind Value</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>