force-app/main/default/objects/cdcpc__RD_MasterBlaster__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__PTC__c</columns>
    <columns>cdcpc__SZC__c</columns>
    <columns>cdcpc__STC__c</columns>
    <columns>cdcpc__VMNFA__c</columns>
    <columns>cdcpc__PressLL__c</columns>
    <columns>cdcpc__PressUL__c</columns>
    <columns>cdcpc__China_ML_LL__c</columns>
    <columns>cdcpc__China_ML_UL__c</columns>
    <columns>cdcpc__VacLL__c</columns>
    <columns>cdcpc__VacUL__c</columns>
    <columns>cdcpc__ASME_LL__c</columns>
    <columns>cdcpc__ASME_UL__c</columns>
    <columns>cdcpc__DSCVAR__c</columns>
    <columns>cdcpc__MatlCode_Key__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cdcpc__PTC__c</field>
        <operation>equals</operation>
        <value>HPX</value>
    </filters>
    <filters>
        <field>cdcpc__STC__c</field>
        <operation>equals</operation>
        <value>FS</value>
    </filters>
    <filters>
        <field>cdcpc__SZC__c</field>
        <operation>equals</operation>
        <value>0100</value>
    </filters>
    <label>All</label>
</ListView>